--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "motion": "^12.16.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^7.6.1",
     "smoothscroll-polyfill": "^0.4.4",
     "tailwindcss": "^4.1.8"
